# Old-Raycaster-2018

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake
include/: Color.h  Engine.h  Map.h  Player.h  Vector2.h  Vector3.h  Wall.h
src/: Engine.cpp  Engine.h  Framerate.cpp  Framerate.h  Main.cpp  View.cpp
src/Engine/: Color.cpp  Engine.cpp  Map.cpp  Player.cpp  Vector2.cpp  Vector3.cpp  Wall.cpp
src/View/: Input.cpp  Input.h  View.cpp  View.h
test/: Vector2Test.cpp
